--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,10 @@
   <artifactId>graalvm-sprinboot</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-
   <properties>
     <java.version>11</java.version>
+    <!--<spring-framework.version>5.3.0-SNAPSHOT</spring-framework.version>-->
   </properties>
-
-
   <modules>
     <module>graalvm-springboot-hello_world</module>
     <module>graalvm-springboot-h2-rest</module>
@@ -26,15 +24,40 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.experimental</groupId>
-      <artifactId>spring-graal-native</artifactId>
-      <version>0.6.0.RELEASE</version>
+      <artifactId>spring-graalvm-native</artifactId>
+      <version>0.7.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-indexer</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.tomcat.embed</groupId>
+          <artifactId>tomcat-embed-websocket</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
   <build>
-    <finalName>
+    <!--<finalName>
       ${project.artifactId}
-    </finalName>
+    </finalName>-->
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -45,9 +68,18 @@
 
   <repositories>
     <repository>
-      <id>spring-milestones</id>
-      <name>Spring Milestones</name>
-      <url>https://repo.spring.io/milestone</url>
+      <id>spring-libs-milestone</id>
+      <url>https://repo.spring.io/libs-milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
     </repository>
   </repositories>
   <pluginRepositories>
@@ -56,52 +88,15 @@
       <name>Spring Milestones</name>
       <url>https://repo.spring.io/milestone</url>
     </pluginRepository>
+    <pluginRepository>
+      <id>spring-libs-milestone</id>
+      <url>https://repo.spring.io/libs-milestone</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </pluginRepository>
   </pluginRepositories>
-
-  <profiles>
-    <profile>
-      <id>graal</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>native-image-maven-plugin</artifactId>
-            <version>20.1.0</version>
-            <configuration>
-              <imageName>${project.artifactId}</imageName>
-              <buildArgs>
-                --no-server --no-fallback --verbose
-                -Dspring.native.mode=agent -Dspring.graal.mode=initialization-only -Dspring.graal.verbose=true
-                -Dspring.graal.remove-unused-autoconfig=true -Dspring.native.remove-jmx-support=true -Dspring.graal.remove-yaml-support=true -Dspring.spel.ignore=true
-              </buildArgs>
-              <!--<buildArgs>
-                -H:IncludeResourceBundles=javax.servlet.http.LocalStrings
-                -Dspring.native.mode=agent
-              </buildArgs>-->
-              <!--<buildArgs>
-                -Dspring.graal.mode=initialization-only -Dspring.graal.dump-config=/tmp/computed-reflect-config.json -Dspring.graal.verbose=true -H:EnableURLProtocols=http 
-              </buildArgs>-->
-              <!--<buildArgs>
-                -H:+PrintAOTCompilation -H:+PrintHeapHistogram -H:EnableURLProtocols=http -Dspring.native.mode=hybrid -Dspring.backgroundpreinitializer.ignore=true
-                -Dspring.spel.ignore=true -Dspring.native.remove-yaml-support=true -Dspring.xml.ignore=true
-              </buildArgs>-->
-            </configuration>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>native-image</goal>
-                </goals>
-                <phase>package</phase>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-
 </project>
